--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,17 +53,19 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.3
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/icons/veriphy-logo.png
+  image: assets/icons/f8_logo.jpg
   android: true
   ios: true
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: assets/icons/veriphy-logo.png
+  # image_path: assets/icons/veriphy-logo.png
+  image_path: assets/icons/f8_logo.jpg
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
